<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg2">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center"
        android:text="@string/txv_title_temp"
        android:background="@color/teal_700"
        android:textColor="@color/white"

        android:textSize="30sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip">
        <TextView
            android:id="@+id/indoorTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" android:layout_marginLeft="10dp"
            android:text="@string/txv_indoor_temp"
            android:textColor="@color/black_alpha"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/indoorTempShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_marginLeft="50dp"
            android:text="@string/txv_indoor_temp_show"
            android:textColor="@color/black_alpha"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip">
        <TextView
            android:id="@+id/indoorHumi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" android:layout_marginLeft="10dp"
            android:text="@string/txv_indoor_humi"
            android:textColor="@color/black_alpha"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/indoorHumiShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_marginLeft="50dp"
            android:text="@string/txv_indoor_humi_show"
            android:textColor="@color/black_alpha"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip">

        <Button
            android:id="@+id/btnUpdateTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/activitybackground"
            android:padding="5dip"
            android:text=" Update "
            android:textAllCaps="false"
            android:textColor="#D50000"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="5dip"> </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/outdoorLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light"
            android:textColor="@color/blue_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/outdoorLightShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light_show"
            android:textColor="@color/title_bar_color"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/bedlamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light"
            android:textColor="@color/blue_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bedlampShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light_show"
            android:textColor="@color/title_bar_color"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCommandResult"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Command"
        android:layout_margin="20dp"/>

</LinearLayout>